<resources>
    <string name="app_name">IT Service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="please_apply_to_continue">Please apply to continue</string>
    <string name="please_sing_up_to_continue">Please sign up continue</string>
    <string name="enterprise_login">Enterprise Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="admin_login">Admin Login</string>
    <string name="engineer_login">Engineer Login</string>
    <string name="login">Login</string>
    <string name="admin_registation">Admin Registration</string>
    <string name="engineer_apply">Engineer Apply Form</string>
    <string name="registation">Registation</string>
    <string name="apply">Apply Now</string>
    <string name="fullname">Full Name</string>
    <string name="company_name">Company name</string>
    <string name="employee_id">Employee id</string>
    <string name="contact_number">Contact number</string>
    <string name="nid">NID</string>
    <string name="enterprise_user_registation">Enterprise registation</string>
    <string name="tin">TIN</string>
    <string name="company_address">Company Address</string>
    <string name="user_registation">User registation</string>
    <string name="select_brand_name">Select Brand Name:</string>
    <string name="select_model_name">Select Model Name</string>
    <string name="submit_problem">Submit Problem</string>
    <string name="write_about_your_problem">Write about your problem</string>
    <string name="completed_service">Completed service</string>
    <string name="channel_name">It_service_channel</string>
    <string name="channel_description">it will be used to local notification</string>
    <string name="task_analysis">Task Analysis</string>
    <string name="product_name">Product Name</string>
    <string name="select_catagory">Select Catagory</string>
    <string name="about_product">About Product</string>
    <string name="part_name">Part Name</string>
    <string name="part_price">Part Price</string>
    <string name="offer_name">Offer Title</string>
    <string name="offer_price">Offer Price</string>
    <string name="catagory_name">catagory Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="service_id">Service ID</string>
    <string name="service_name">Service Name</string>
    <string name="service_catagory">Service Catagory</string>
    <string name="quantity">Quantity</string>
    <string name="tin_optional">TIN (Optional)</string>
    <string name="crete_services">Creat Services</string>
    <string name="check_tasks">Check Tasks</string>
    <string name="add_products">Add Products</string>
    <string name="add_offers">Add offers</string>
    <string name="add_parts">Add Parts</string>
    <string name="users_list">Users List</string>
    <string name="add_an_offer_toast">Added an offer</string>
    <string name="failed_to_add_offer">Failed to add offer</string>
    <string name="engineer_catagory">Engineer catagory</string>
</resources>