<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.login.AdminLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_login"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/et_layer_email_admin_login"
            app:layout_constraintVertical_bias="0.7"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="6dp"
            android:text="@string/please_sign_in_to_continue"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layer_email_admin_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_admin_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layer_password_admin_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_layer_email_admin_login"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_admin_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignInAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/et_layer_password_admin_login"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:letterSpacing="0.15"
            android:background="@color/purple_700"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_do_not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account"
            android:letterSpacing="0.05"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_up_admin_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:letterSpacing="0.05"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_do_not_have_account"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            />
        
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>