<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".enterprise_user.enterprise_user_login.engineer.login_fragment.EngineerLoginFragment">

    <ProgressBar
        android:id="@+id/pb_engineer_login"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="@string/engineer_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/et_layer_email_engineer_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/please_sign_in_to_continue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layer_email_engineer_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_engineer_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layer_password_engineer_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_layer_email_engineer_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_engineer_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignInEngineer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/teal_200"
            android:letterSpacing="0.15"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_layer_password_engineer_login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_do_not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:letterSpacing="0.05"
            android:visibility="gone"
            android:text="Don't have an account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_up_engineer_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="20dp"
            android:letterSpacing="0.05"
            android:text="@string/sign_up"
            android:visibility="gone"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_do_not_have_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>