<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".enterprise_user.registation.EnterpriseUserRegistationFragment">

    <ProgressBar
        android:id="@+id/pb_enterprise_user_registration"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_registation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterprise_user_registation"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="40dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_detail_enterprise_user_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_registation_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="6dp"
            android:text="@string/please_sing_up_to_continue"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_enterprise_user_registration"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layer_email_enterprise_user_registation"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_enterprise_user_registation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layer_password_enterprise_user_registation"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_enterprise_user_registation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/password" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layer_tin_enterprise_user_registation"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_tin_enterprise_user_registation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/tin" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layer_company_name_enterprise_user_registation"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_company_name_enterprise_user_registation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/company_name" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layer_company_address_enterprise_user_registation"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_company_address_enterprise_user_registation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/company_address" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layer_contact_number_enterprise_user_registation"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_contact_number_enterprise_user_registation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/contact_number" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSingUpenterpriseUserRegistation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registation"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:letterSpacing="0.15"
                    android:padding="6dp"
                    android:layout_gravity="right"
                    android:background="@color/teal_200"
                    android:layout_marginTop="20dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_do_not_have_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account"
                        android:letterSpacing="0.05"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintHorizontal_bias="0.4"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_sign_up_enterprise_user_registation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/sign_in"
                        android:letterSpacing="0.05"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="8dp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@+id/tv_do_not_have_account"
                        android:textColor="@color/teal_700"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>